Fix member assign to box hidden behind subtasks (#716)
* Fix member assign to box hidden behind subtasks

* update LAST_DAY_OF_EXAMS and LAST_DAY_OF_CLASS date constants

* oops 2021

--- a/frontend/src/components/Util/GroupMemberListPicker/SearchGroupMember.module.scss
+++ b/frontend/src/components/Util/GroupMemberListPicker/SearchGroupMember.module.scss
@@ -1,3 +1,5 @@
+@import '../../../z-index.scss';
+
 input.SearchInput {
   display: block;
   width: 90%;
@@ -22,6 +24,7 @@ input.SearchInput {
   list-style: none;
   background: darkgray;
   box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.15);
+  z-index: $LEVEL_6_PICKER_IN_TASK_CREATOR;
 }
 
 .MemberSearchResults {
